// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-project-plan - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan and design an Azure-centric project with user requirements gathering and interactive plan approval. Generates .azure/project-plan.md, then auto-chains to azure-project-scaffold. WHEN: "plan project", "design app", "new project", "project requirements", "create project plan", "plan my app", "what should I build", "scaffold project", "new Azure app", "create testable app", "new API project", "full-stack Azure app", "new project with tests", "create app", "bootstrap project", "new fullstack project", "testable API", "create functions project".",
  "extractedKeywords": [
    "approval",
    "authentication",
    "auto-chains",
    "azure",
    "azure-centric",
    "azure-project-scaffold",
    "bicep",
    "bootstrap",
    "build",
    "cli",
    "cosmos",
    "create",
    "deploy",
    "design",
    "full-stack",
    "fullstack",
    "function",
    "functions",
    "gathering",
    "generates",
    "interactive",
    "plan",
    "project",
    "project-plan",
    "redis",
    "requirements",
    "scaffold",
    "should",
    "sql",
    "storage",
    "terraform",
    "testable",
    "tests",
    "then",
    "user",
    "validation",
    "what",
    "when",
    "with",
  ],
  "name": "azure-project-plan",
}
`;

exports[`azure-project-plan - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "approval",
  "authentication",
  "auto-chains",
  "azure",
  "azure-centric",
  "azure-project-scaffold",
  "bicep",
  "bootstrap",
  "build",
  "cli",
  "cosmos",
  "create",
  "deploy",
  "design",
  "full-stack",
  "fullstack",
  "function",
  "functions",
  "gathering",
  "generates",
  "interactive",
  "plan",
  "project",
  "project-plan",
  "redis",
  "requirements",
  "scaffold",
  "should",
  "sql",
  "storage",
  "terraform",
  "testable",
  "tests",
  "then",
  "user",
  "validation",
  "what",
  "when",
  "with",
]
`;
